--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../src/css/index.css">
+    <title>BLOG</title>
 </head>
 
 <body>
-    MAIN PAGE
+    <div class="blog"></div>
 </body>
+<script src="../src/js/blog.js"></script>
 
 </html>
