--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../src/css/admin.css">
         <title>Image Upload Form</title>
     </head>
 
@@ -33,12 +34,13 @@
             <input type="text" id="imageCountry" name="image_country">
 
             <button type="submit">Загрузить картинку</button>
+            <button class="exit">Выйти</button>
         </form>
     </body>
 
     </html>
 
-    <button class="exit">Выйти</button>
+
 </body>
 <script src="../src/js/admin.js"></script>
 <script src="../src/js/admin_upload.js"></script>
