--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/css/admin_login.css">
     <title>Авторизация</title>
 </head>
 
 <body>
+
     <form id="login" action="/admin">
+        <h1>Авторизация</h1>
         <input type="text" class="login-form" required placeholder="Логин">
         <input type="password" class="password-form" required placeholder="Пароль">
         <input type="submit" value="Вход">
