--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,42 +1,209 @@
-body {
-    margin: 0;
-}
-
-.image {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 5px;
-}
-
-.card {
-    margin-right: 10px;
-    margin-top: 20px;
-    width: 300px;
-    height: 400px;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2em;
-}
-
 #images {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+#themeToggleBtn {
+    cursor: pointer;
+    background-color: white;
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border: 1px solid black;
+}
+
+/* Добавляем стили для темной темы */
+body.dark-theme {
+    background-color: #0e0e0e;
+    color: #fff;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+/* Изменяем цвет header при переключении темы */
+body.dark-theme header {
+    background-color: black;
+    color: #fff;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+/* Изменяем цвет иконок в навигационном меню при темной теме */
+body.dark-theme .social-icons a i {
+    color: #fff;
+    transition: color 0.3s ease-in-out;
+}
+
+/* Добавляем стили для светлой темы */
+body:not(.dark-theme) {
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+/* Изменяем цвет header при переключении темы */
+body:not(.dark-theme) header {
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+/* Изменяем цвет иконок в навигационном меню при светлой теме */
+body:not(.dark-theme) .social-icons a i {
+    color: black;
+    transition: color 0.3s ease-in-out;
+}
+
+
+
+
+
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+#images {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card {
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    position: relative;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    z-index: 2;
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    border-radius: 10px;
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0;
+}
+
+.card:hover::before {
+    opacity: 1;
+}
+
+.card-title,
+.card-price {
+    padding: 10px;
+    text-align: center;
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    z-index: 3;
+}
+
+.card:hover .card-title,
+.card:hover .card-price {
+    display: block;
+    z-index: 4;
+}
+
+
+
+
+
+.image {
+    max-height: 400px;
+    background-size: cover;
+    background-position: center;
+}
+
+
+/* Добавляем новые стили для header */
+header {
+    background-color: black;
+    color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    border-bottom: 1px solid black;
+}
+
+h1 {
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    font-size: 24px;
+}
+
+nav {
+    margin-top: 10px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 16px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+/* Стили для социальных иконок */
+.social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.social-icons a {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.social-icons img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.social-icons img:hover {
+    transform: scale(1.2);
 }
