--- a/templates/image_page.html
+++ b/templates/image_page.html
@@ -4,15 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="../src/css/image_page.css">
     <title>Картинка</title>
 </head>
 
 <body>
-    <div class="image-name"></div>
-    <div class="image-desc"></div>
-    <div class="image-country"></div>
-    <img src="" alt="" class="image" style="width: 100%;">
+    <header>
+        <h1>Paul Orlov</h1>
+        <nav>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></a>
+            </div>
+        </nav>
+        <button id="themeToggleBtn">
+            <i class="fas fa-sun"></i> <!-- Иконка для светлой темы -->
+        </button>
+    </header>
+    <div class="image-container">
+        <img src="" alt="" class="image">
+        <div class="image-details">
+            <div class="image-name"></div>
+            <div class="image-desc"></div>
+            <div class="image-country"></div>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></a>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="/src/js/theme.js"></script>
 <script src="/src/js/image_page.js"></script>
 
 </html>
