--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио фотографа</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 
 <body>
     <header>
-        <h1>Ваше Фотоискусство</h1>
+        <h1>Paul Orlov</h1>
+        <nav>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></a>
+            </div>
+        </nav>
+        <button id="themeToggleBtn">
+            <i class="fas fa-sun"></i> <!-- Иконка для светлой темы -->
+        </button>
     </header>
     <div id="images"></div>
 </body>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="/src/js/theme.js"></script>
 <script src="/src/js/index.js"></script>
 
 </html>
