--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    background-color: #0e0e0e;
 }
 
 form {
