--- a/src/css/admin_login.css
+++ b/src/css/admin_login.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f2f2f2;
+    background-color: #0e0e0e;
 }
 
 form {
